--- a/event.html
+++ b/event.html
@@ -27,9 +27,13 @@
     <h2 class="eventtitle">
         <strong>Cycle the Continental Divide</strong><br>
         <strong>Annual Event</strong>
+       
     </h2>
-        <img src="images/mtn3_800.jpg" alt="eventpic">
-    <form action="thanks.html">
+     <p><a href ="https://dragonballz789.github.io/MountainSpoke.github.io/event.html#eventform">Click me to Register</a></p>
+        <img src="images/event200.jpg" alt="bikesale" srcset="images/event500.jpg 601w, images/event800.jpg 1051w, images/event1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
+        <img src="images/event1_200.jpg" alt="bikesale" srcset="images/event1_500.jpg 601w, images/event1_800.jpg 1051w, images/event1_1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
+        <img src="images/event2_200.jpg" alt="bikesale" srcset="images/event2_500.jpg 601w, images/event2_800.jpg 1051w, images/event2_1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
+    <form id="eventform" action="thanks.html">
         <fieldset class = "register">
             <legend>Registration</legend>
             <label class="rform">Full Name*<input type="text" name="fullname"> </label>
