--- a/sales.html
+++ b/sales.html
@@ -15,12 +15,13 @@
     <header class="header" includefile="header.html">
     </header>
 <main>
-<nav>
-    <ul id="bicyclemenu" class="bicylemenuhide">
-    	   <li class="bicycle active"><a href="index.html">Home</a></li>
+<nav class="clearfix">
+     <button onclick="bikenavbar()">&#9776;</button>
+    <ul id="bmenu" class="hide">
+    	   <li class="bicycle"><a href="index.html">Home</a></li>
     	   <li class="bicycle"><a href="adventure.html">Adventure Tours</a></li>
     	   <li class="bicycle"><a href="event.html">Events</a></li>
-    	   <li class="bicycle"><a href="sales.html">Sales</a></li>
+    	   <li class="bicycle active"><a href="sales.html">Sales</a></li>
            <li class="bicycle"><a href="service.html">Service</a></li>
     	   <li class="bicycle"><a href="contact.html">Contact</a></li>
        
@@ -72,4 +73,8 @@
 </body>
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
+    <script type="text/javascript" src="js/active.js"></script>
+    <script type="text/javascript" src="js/activetab.js"></script>
+    <script type="text/javascript" src="js/navbar.js"></script>
+
 </html>
