--- a/service.html
+++ b/service.html
@@ -28,50 +28,50 @@
     </nav>
       <table>
         <tr>
-            <th>Services</th>  
-            <th>cost</th>
+            <th>services</th>  
+            <th><span id#mtn cost></span></th>
         </tr>
         <tr>
             <td>bike wash</td>
-            <td>$10</td>
+            <td><span id#mtnwash></span></td>
           </tr>
           <tr>
             <td>inspection</td>
-            <td>$20</td>
+            <td><span id#mtninsp></span></td>
           </tr>
           <tr>
             <td>brake adjustments</td>
-            <td>$25</td>
+            <td><span id#mtnbrake></span></td>
           </tr>
           <tr>
             <td>derailleur adjustments</td>
-            <td>$25</td>
+            <td><span id#mtnrail> </span></td>
           </tr>
           <tr>
             <td>lubricate chain, derailleus and shift cables</td>
-            <td>$15</td>
+            <td><span id#mtnchain></span></td>
           </tr>
           <tr>
             <td>pressurize tires</td>
-            <td>$5</td>
+            <td><span id#mtntire></span></td>
           </tr>
           <tr>
             <td>shifting system adjustments</td>
-            <td>$20</td>
+            <td><span id#mtnshift></span></td>
           </tr>
           <tr>
             <td>wheels laterally trued</td>
-            <td>$20</td>
+            <td><span id#mtnwheel></span></td>
           </tr>
           <tr>
             <td>tire tube replacement</td>
-            <td>up to $20</td>
+            <td><span id#mtntube></span></td>
           </tr>
             <td>basic service</td>
-            <td>$45</td>
+            <td><span id#mtnbasic></span></td>
           <tr>
             <td>flat repair</td>
-            <td>$7</td>
+            <td><span id#mtnflat></span></td>
           </tr>
         
     </table>
@@ -87,5 +87,6 @@
     <script type="text/javascript" src="js/active.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
+    <script type="text/javascript" src="js/jsondata.js"></script>
 
 </html>
