--- a/service.html
+++ b/service.html
@@ -28,49 +28,49 @@
       <table>
         <tr>
             <th>services</th>  
-            <th><span id#mtncost></span></th>
+            <th><span id=mtncost></span></th>
         </tr>
         <tr>
             <td>bike wash</td>
-            <td><span id#mtnwash></span></td>
+            <td><span id=mtnwash></span></td>
           </tr>
           <tr>
             <td>inspection</td>
-            <td><span id#mtninsp></span></td>
+            <td><span id=mtninsp></span></td>
           </tr>
           <tr>
             <td>brake adjustments</td>
-            <td><span id#mtnbrake></span></td>
+            <td><span id=mtnbrake></span></td>
           </tr>
           <tr>
             <td>derailleur adjustments</td>
-            <td><span id#mtnrail> </span></td>
+            <td><span id=mtnrail> </span></td>
           </tr>
           <tr>
             <td>lubricate chain, derailleus and shift cables</td>
-            <td><span id#mtnchain></span></td>
+            <td><span id=mtnchain></span></td>
           </tr>
           <tr>
             <td>pressurize tires</td>
-            <td><span id#mtntire></span></td>
+            <td><span id=mtntire></span></td>
           </tr>
           <tr>
             <td>shifting system adjustments</td>
-            <td><span id#mtnshift></span></td>
+            <td><span id=mtnshift></span></td>
           </tr>
           <tr>
             <td>wheels laterally trued</td>
-            <td><span id#mtnwheel></span></td>
+            <td><span id=mtnwheel></span></td>
           </tr>
           <tr>
             <td>tire tube replacement</td>
-            <td><span id#mtntube></span></td>
+            <td><span id=mtntube></span></td>
           </tr>
             <td>basic service</td>
-            <td><span id#mtnbasic></span></td>
+            <td><span id=mtnbasic></span></td>
           <tr>
             <td>flat repair</td>
-            <td><span id#mtnflat></span></td>
+            <td><span id=mtnflat></span></td>
           </tr>
         
     </table>
