--- a/service.html
+++ b/service.html
@@ -27,49 +27,49 @@
     </nav>
       <table>
         <tr>
-            <th>services</th>  
+            <th><span id=mtnrcost></span></th>  
             <th><span id=mtncost></span></th>
         </tr>
         <tr>
-            <td>bike wash</td>
+            <td><span id=mtnrwash></span></td>
             <td><span id=mtnwash></span></td>
           </tr>
           <tr>
-            <td>inspection</td>
+              <td><span id=mtnrinsp></span></td>
             <td><span id=mtninsp></span></td>
           </tr>
           <tr>
-            <td>brake adjustments</td>
+              <td><span id=mtnrbrakes></span></td>
             <td><span id=mtnbrake></span></td>
           </tr>
           <tr>
-            <td>derailleur adjustments</td>
+              <td><span id=mtnrrail></span></td>
             <td><span id=mtnrail> </span></td>
           </tr>
           <tr>
-            <td>lubricate chain, derailleus and shift cables</td>
+              <td><span id=mtnrchain></span></td>
             <td><span id=mtnchain></span></td>
           </tr>
           <tr>
-            <td>pressurize tires</td>
+              <td><span id=mtnrtire></span></td>
             <td><span id=mtntire></span></td>
           </tr>
           <tr>
-            <td>shifting system adjustments</td>
+              <td><span id=mtnrshift></span></td>
             <td><span id=mtnshift></span></td>
           </tr>
           <tr>
-            <td>wheels laterally trued</td>
+              <td><span id=mtnrwheel></span></td>
             <td><span id=mtnwheel></span></td>
           </tr>
           <tr>
-            <td>tire tube replacement</td>
+              <td><span id=mtnrtube></span></td>
             <td><span id=mtntube></span></td>
           </tr>
-            <td>basic service</td>
+          <td><span id=mtnrbasic></span></td>
             <td><span id=mtnbasic></span></td>
           <tr>
-            <td>flat repair</td>
+              <td><span id=mtnrflat></span></td>
             <td><span id=mtnflat></span></td>
           </tr>
         
