--- a/service.html
+++ b/service.html
@@ -25,6 +25,7 @@
        
         </ul>
     </nav>
+    <h2>Services Offered</h2>
       <table>
         <tr>
             <th><span id=mtnrcost></span></th>  
@@ -39,7 +40,7 @@
             <td><span id=mtninsp></span></td>
           </tr>
           <tr>
-              <td><span id=mtnrbrakes></span></td>
+              <td><span id=mtnrbrake></span></td>
             <td><span id=mtnbrake></span></td>
           </tr>
           <tr>
