--- a/event.html
+++ b/event.html
@@ -32,9 +32,10 @@
         <strong>Annual Event</strong>
         
     </h2>
-    <p>August 10-11, 2018 </p>
-     <p><a href ="https://dragonballz789.github.io/MountainSpoke.github.io/event.html#eventform">Click me to Register</a></p>
-        <img src="images/event200.jpg" alt="bikesale" srcset="images/event500.jpg 601w, images/event800.jpg 1051w, images/event1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
+    <p id="date">August 10-11, 2018 </p>
+     <p id="reg"><a href ="https://dragonballz789.github.io/MountainSpoke.github.io/event.html#eventform">Click me to Register</a></p>
+    <section id="regevent">    
+    <img src="images/event200.jpg" alt="bikesale" srcset="images/event500.jpg 601w, images/event800.jpg 1051w, images/event1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
         <p>Categories: Marathon 2 lap (approx 40 miles)<br>
            XC 1 Lap (approx 25 miles)<br>
            1 Lap (approx 15 miles)
@@ -42,6 +43,7 @@
         <img src="images/event1_200.jpg" alt="bikesale" srcset="images/event1_500.jpg 601w, images/event1_800.jpg 1051w, images/event1_1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
         <p>Endurance and cross country</p>
         <img src="images/event2_200.jpg" alt="bikesale" srcset="images/event2_500.jpg 601w, images/event2_800.jpg 1051w, images/event2_1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
+    </section>
     <form id="eventform" action="thanks.html">
         <fieldset class = "register">
             <legend>Registration</legend>
@@ -50,11 +52,12 @@
             <label class="rform">Phone<input type ="number" name="phonenumber"></label>
             <label class="rform">Date of Birth<input type="date" name="dateofbirth"></label>
             <label class="rform">Home State/Country<input type=text name="origin"></label>
-            <label class="rform">Race Category</label>
-            <label class="rform">Marathon<input type=radio name="category"></label>
-            <label class="rform">XC 1 Lap<input type=radio name="category"></label>
-            <label class="rform">1 Lap<input type=radio name="category"></label>
-            <textarea>Special accommodations/comments</textarea>
+            <div>Race Category</div>
+            <label>Marathon<input type=radio name="category" value="Marathon"></label>
+            <label>XC 1 Lap<input type=radio name="category" value="XC 1 Lap"></label>
+            <label>1 Lap<input type=radio name="category" value="1 Lap"></label>
+            <div>Special accommodations/comments</div>
+            <textarea rows ="3" cols="40" name="comments" maxlength="500" wrap="hard"></textarea>
         </fieldset>
         <input type="submit" value="Apply">
             
@@ -67,7 +70,6 @@
 </body>
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
-    <script type="text/javascript" src="js/active.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
 
