--- a/thanks.html
+++ b/thanks.html
@@ -14,7 +14,7 @@
     <header class="header" includefile="header.html">
     </header>
 <main>
-    <ul id="bicyclemenu" class="bicylemenuhide">
+    <ul id="bmenu" class="hide">
     	   <li class="bicycle active"><a href="index.html">Home</a></li>
     	   <li class="bicycle"><a href="adventure.html">Adventure Tours</a></li>
     	   <li class="bicycle"><a href="event.html">Events</a></li>
