--- a/adventure.html
+++ b/adventure.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="adventure+page">
+    <meta name="description" content="Mountain_Spoke_Adventure_page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/adventuremain.css" type="text/css">
     <link rel="stylesheet" href="styles/adventuremedium.css" type="text/css">
     <link rel="stylesheet" href="styles/adventurelarge.css" type="text/css">
      <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>Mountain_Spoke_Adventure_page</title>
     </head>
 <body>
     <header class="header" includefile="header.html">
@@ -63,10 +64,10 @@
 <footer class="footer" includefile1="footer.html">
     </footer>
 
-</body>
+
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
-
+    </body>
 </html>
