--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="mountain_spoke_main_page">
     <link rel="stylesheet" href="styles/indexmain.css" type="text/css">
     <link rel="stylesheet" href="styles/indexmedium.css" type="text/css">
     <link rel="stylesheet" href="styles/indexlarge.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>Mountain_Spoke_Main_page</title>
    
     </head>
     <body>
