--- a/modules/footer.html
+++ b/modules/footer.html
@@ -2,5 +2,6 @@
         <p>Mountain Spoke<br>
            3950 Valley Commons Dr.<br>
            Bozeman, MT <br>
-           <a href="contact.html">Contact Us</a></p>
+           <a href="contact.html">Contact Us</a><br>
+            <a href="reference.html">Reference Page</a></p>
         </section>
