--- a/reference.html
+++ b/reference.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="adventure+page">
+    <meta name="description" content="mountain_spoke_Referencepage">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/servicemain.css" type="text/css">
     <link rel="stylesheet" href="styles/servicemedium.css" type="text/css">
     <link rel="stylesheet" href="styles/servicelarge.css" type="text/css">
      <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>reference page</title>
     </head>
 <body>
     <header class="header" includefile="header.html">
@@ -18,12 +19,19 @@
     	   <li class="bicycle active"><a href="index.html">Home</a></li>
     	   <li class="bicycle"><a href="adventure.html">Adventure Tours</a></li>
     	   <li class="bicycle"><a href="event.html">Events</a></li>
-    	   <li class="bicycle"><a href="sales.html">Sales</a></li>
+    	   <li class="bicycle"><a href="sales.html">Shop</a></li>
            <li class="bicycle"><a href="service.html">Service</a></li>
     	   <li class="bicycle"><a href="contact.html">Contact</a></li>
        
         </ul>
-      <p>Thank you for registering your adventure awaits you.</p>
+    <h2>Reference page</h2>
+        <p>For the bike images for the shop and basic info i got them from</p>
+      <p>https://www.dickssportinggoods.com/p/gt-mens-aggressor-comp-27-5-mountain-bike-18gtxa275mggrssrcprf/18gtxa275mggrssrcprf?recid=Product_PageElement_product_rr_1_5123_&rrec=true</p>
+    <p>
+https://www.trekbikes.com/us/en_US/bikes/mountain-bikes/c/B300/</p>
+    <p>https://bicyclewarehouse.com/collections/mountain-bikes/products/diamondback-clutch-1-2017</p>
+    <p>All other images i got were from pexels.com </p>
+    <p></p>
         
     </main>
 <footer class="footer" includefile1="footer.html">
