--- a/sales.html
+++ b/sales.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="adventure+page">
+    <meta name="description" content="Mountain_spoke_sales_page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/salesmain.css" type="text/css">
     <link rel="stylesheet" href="styles/salesmedium.css" type="text/css">
     <link rel="stylesheet" href="styles/saleslarge.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>Mountain_Spoke_Sales_page</title>
     
     </head>
 <body>
@@ -90,10 +91,10 @@
         
         });
     </script>
-</body>
+
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
-
+    </body>
 </html>
