--- a/service.html
+++ b/service.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/servicemedium.css" type="text/css">
     <link rel="stylesheet" href="styles/servicelarge.css" type="text/css">
      <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>Mountain Spoke Service</title>
     </head>
 <body>
     <header class="header" includefile="header.html">
@@ -67,8 +68,10 @@
               <td><span id=mtnrtube></span></td>
             <td>&#36;<span id=mtntube></span></td>
           </tr>
+          <tr>
           <td><span id=mtnrbasic></span></td>
             <td>&#36;<span id=mtnbasic></span></td>
+          </tr>
           <tr>
               <td><span id=mtnrflat></span></td>
             <td>&#36;<span id=mtnflat></span></td>
@@ -82,11 +85,11 @@
 <footer class="footer" includefile1="footer.html">
     </footer>
 
-</body>
+
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
     <script type="text/javascript" src="js/jsondata.js"></script>
-
+    </body>
 </html>
