--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="adventure+page">
+    <meta name="description" content="Mountain_Spoke_Contact_Page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/contactmain.css" type="text/css">
     <link rel="stylesheet" href="styles/contactmedium.css" type="text/css">
     <link rel="stylesheet" href="styles/contactlarge.css" type="text/css">
      <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+    <title>Mountain_Spoke_Contact_page</title>
     </head>
 <body>
     <header class="header" includefile="header.html">
@@ -49,10 +50,10 @@
 <footer class="footer" includefile1="footer.html">
     </footer>
 
-</body>
+
     <script type="text/javascript" src="js/includefooter.js"></script>
     <script type="text/javascript" src="js/includeheader.js"></script>
     <script type="text/javascript" src="js/activetab.js"></script>
     <script type="text/javascript" src="js/navbar.js"></script>
-
+    </body>
 </html>
