--- a/adventure.html
+++ b/adventure.html
@@ -37,10 +37,10 @@
         <div class="tour1">
              <img src="images/mtn3_200.jpg" alt="bikesale" srcset="images/mtn3_500.jpg 601w, images/mtn3_800.jpg 1051w, images/mtn3_1100.jpg 2000w" sizes="(max-width: 600px) 601px, (max-width:1050px) 1050px, (max-width:2000px) 2000px">
             <p>
-                length
-                skill level required
-                cost
-                location of tours
+                &sim; 14 miles<br>
+                Difficult Level:Medium (hard for beginners)<br>
+                Tour Cost: $40 <br>
+                Tour starting point is 1 mile north of Bozeman, MT. For directions <a href="contact.html">Click Here</a> or visit us at Mountain Spoke store in Bozeman for a map.
             </p>
         </div>
         <div class="tour2">
@@ -49,7 +49,7 @@
                 &sim; 24 miles <br>
                 Difficult level:Hard <br>
                 Tour Cost: $50 <br>
-                tour starting point is 1 mile north of Bozeman, MT. For directions click here or visit us at Mountain Spoke store in Bozeman for a map.
+                tour starting point is 1 mile north of Bozeman, MT. For directions <a href="contact.html">Click Here</a> or visit us at Mountain Spoke store in Bozeman for a map.
                 
             </p>
         </div>
