--- a/modules/footer.html
+++ b/modules/footer.html
@@ -3,5 +3,6 @@
            3950 Valley Commons Dr.<br>
            Bozeman, MT <br>
            <a href="contact.html">Contact Us</a><br>
-            <a href="reference.html">Reference Page</a></p>
+            <a href="reference.html">Reference Page</a><br>
+            <a href="video.html">Overview Video</a></p>
         </section>
