--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
         </fieldset>
         <input type="submit" value="Submit">
     </form>
-    
+    <p>Tour starting point is on the corner of Fallon St and Folwer Ave across from Bozeman Pond</p>
     <a href ="https://goo.gl/maps/iCcgc82anZS2">Location map</a>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2787.9316277611047!2d-111.09290618443556!3d45.67227287910392!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5345459ab72cb6df%3A0xbb98968f9648ea88!2s3950+Valley+Commons+Dr%2C+Bozeman%2C+MT+59718!5e0!3m2!1sen!2sus!4v1531967401481" frameborder="0" style="border:0" allowfullscreen></iframe>
     
