--- a/video.html
+++ b/video.html
@@ -24,7 +24,7 @@
     	   <li class="bicycle"><a href="contact.html">Contact</a></li>
        
         </ul>
-    <iframe width="420" height="345" src="https://youtu.be/hcwkh808Zms"></iframe>
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/hcwkh808Zms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         
     </main>
 <footer class="footer" includefile1="footer.html">
